[package]
name = "scrypt-wasm"
version = "0.1.1"
description = "wasm implementation of scrypt"
authors = ["Kosala Hemachandra <kvhnuke@aol.com>", "oplik0"]
edition = "2018"
license = "MIT"
repository = "https://github.com/oplik0/scrypt-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rust-crypto-wasm = "^0.3"
hex = "^0.3"